fixed dark mode colour settings

--- a/static/default.css
+++ b/static/default.css
@@ -412,7 +412,10 @@ h6 { font-size: 16px;}
 #list_projects{
 	color: var(--list_projects);
 }
-	
+
+strong{
+	color: var(--list_projects);	
+}
 
 @media screen and (max-width: 1200px){
 	.main-container{
